--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "airtable": "^0.12.2",
     "axios": "^1.6.5",
     "express": "^4.18.2",
+    "node-cache": "^5.1.2",
     "node-fetch": "^3.2.6"
   }
 }
